fixed email link

--- a/output/team.html
+++ b/output/team.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>awesome</title>
+    <title>awesomeness</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet"
         id="bootstrap-css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 
 <body>
 
-    <h1 id="teamName">awesome</h1>
+    <h1 id="teamName">awesomeness</h1>
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     
@@ -21,7 +21,7 @@
         <div class="card hovercard">
     <div class="cardheader">
         <div class="card-heading">
-            duggie
+            i am
         </div>
 
         <div class="role">
@@ -33,36 +33,17 @@
         <div class="desc">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">ID: 1</li>
-                <li class="list-group-item">Email: duggie@work.com</li>
+                <a href="mailto: jeff@email.com">
+                    <li class="list-group-item">Send Email</li>
+                    </a>
                 <li class="list-group-item">Office: 1234</li>
-            </ul>
-        </div>
-    </div>
-</div>
-<div class="card hovercard">
-    <div class="cardheader">
-        <div class="card-heading">
-            freddy
-        </div>
-
-        <div class="role">
-            <img src="../images/Intern.ico"></img>
-            Intern
-        </div>
-    </div>
-    <div class="card-body">
-        <div class="desc">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 3</li>
-                <li class="list-group-item">Email: freddy@work.com</li>
-                <li class="list-group-item">School: uofr</li>
             </ul>
         </div>
     </div>
 </div><div class="card hovercard">
     <div class="cardheader">
         <div class="card-heading">
-            jeff
+            gavin
         </div>
 
         <div class="role">
@@ -73,9 +54,11 @@
     <div class="card-body">
         <div class="desc">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 3</li>
-                <li class="list-group-item">Email: jeff@work.com</li>
-                <a href="jeff">
+                <li class="list-group-item">ID: 2</li>
+                <a href="mailto: g_hardlotte@hotmail.com">
+                <li class="list-group-item">Send Email</li>
+                </a>
+                <a href="https://github.com/ghardlotte">
                     <li class="list-group-item">Github</li>
                 </a>
             </ul>
